Update lib_deps at platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,5 +13,6 @@ platform = atmelavr
 board = uno
 framework = arduino
 lib_deps =
-  LiquidCrystal
+  SPI
   Wire
+  git@bitbucket.org:teckel12/arduino-timer-free-tone.git
