Use forked Nikia lib

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,4 +16,4 @@ lib_deps =
   SPI
   Wire
   git@bitbucket.org:teckel12/arduino-timer-free-tone.git
-  Nokia 5110 LCD library
+  git@github.com:bubnov-mikhail/nokia-5110-lcd-library.git
