--- a/platformio.ini
+++ b/platformio.ini
@@ -15,5 +15,6 @@ framework = arduino
 lib_deps =
   SPI
   Wire
+  arduino-menusystem
   https://bitbucket.org/teckel12/arduino-timer-free-tone.git
   https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
