--- a/platformio.ini
+++ b/platformio.ini
@@ -12,9 +12,13 @@
 platform = atmelavr
 board = uno
 framework = arduino
+lib_ldf_mode = chain+
 lib_deps =
   SPI
   Wire
+  Time
+  DS1307RTC
+  ; Nokia 5110 LCD library@master
   arduino-menusystem
   https://bitbucket.org/teckel12/arduino-timer-free-tone.git
   https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
