Switch back to original LCD lib

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,7 @@ lib_deps =
   Wire
   Time
   DS1307RTC
-  ;Nokia 5110 LCD library@^2.2.0
+  Nokia 5110 LCD library@^2.2.0
   arduino-menusystem
   https://bitbucket.org/teckel12/arduino-timer-free-tone.git
-  https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
+  ; https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
