--- a/platformio.ini
+++ b/platformio.ini
@@ -13,13 +13,14 @@ platform = atmelavr
 board = uno
 framework = arduino
 lib_ldf_mode = chain+
-lib_deps =
-  SPI
-  Wire
-  Time
-  DS1307RTC
-  Nokia 5110 LCD library@^2.2.0
-  arduino-menusystem
-  https://bitbucket.org/teckel12/arduino-timer-free-tone.git
-  https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
-  ; https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
+lib_deps = 
+	SPI
+	Wire
+	Time
+	DS1307RTC
+	tmrh20/RF24 @ ^1.3.11
+	Nokia 5110 LCD library@^2.2.0
+	arduino-menusystem
+	https://bitbucket.org/teckel12/arduino-timer-free-tone.git
+	https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
+	tmrh20/RF24@^1.3.11
