--- a/platformio.ini
+++ b/platformio.ini
@@ -18,9 +18,9 @@ lib_deps =
 	Wire
 	Time
 	DS1307RTC
-	tmrh20/RF24 @ ^1.3.11
-	Nokia 5110 LCD library@^2.2.0
 	arduino-menusystem
+	tmrh20/RF24@^1.3.11
 	https://bitbucket.org/teckel12/arduino-timer-free-tone.git
 	https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
-	tmrh20/RF24@^1.3.11
+	https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
+	; Nokia 5110 LCD library@^2.3.0
