Update main.h and platformio.ini

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,8 +10,9 @@
 
 [env:uno]
 platform = atmelavr
-board = micro
+board = uno
 framework = arduino
+upload_port = /dev/ttyUSB*
 lib_ldf_mode = chain+
 lib_deps = 
 	SPI
