--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = atmelavr
 board = uno
 framework = arduino
-;upload_port = /dev/ttyUSB*
+upload_port = /dev/ttyUSB*
 lib_ldf_mode = chain+
 lib_deps = 
 	SPI
