--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:uno]
 platform = atmelavr
-board = uno
+board = nanoatmega328 ;uno
 framework = arduino
 upload_port = /dev/ttyUSB*
 lib_ldf_mode = chain+
