--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,56 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:uno]
+[env:initial-setup-1]
 platform = atmelavr
 board = nanoatmega328 ;uno
 framework = arduino
 upload_port = /dev/ttyUSB*
+build_flags =
+    -DSET_CONFIG_DEFAULTS ; Write configuration defaults like contrast, backlight, sound.
+    -DSET_GFX_ASSETS ; Write GFX assets
+    -DSET_GFX_ASSETS_PART_2 ; Write GFX assets part 1 (Both parts will not fit into the nano's memory)
+lib_ldf_mode = chain+
+lib_deps = 
+	SPI
+	Wire
+	Time
+	DS1307RTC
+	arduino-menusystem
+	tmrh20/RF24@^1.3.11
+	https://bitbucket.org/teckel12/arduino-timer-free-tone.git
+	https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
+	; https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
+	https://github.com/platisd/nokia-5110-lcd-library.git@^2.3.0
+
+[env:initial-setup-2]
+platform = atmelavr
+board = nanoatmega328 ;uno
+framework = arduino
+upload_port = /dev/ttyUSB*
+build_flags =
+    -DSET_GFX_ASSETS ; Write GFX assets
+    -DSET_GFX_ASSETS_PART_2 ; Write GFX assets part 2 (Both parts will not fit into the nano's memory)
+lib_ldf_mode = chain+
+lib_deps = 
+	SPI
+	Wire
+	Time
+	DS1307RTC
+	arduino-menusystem
+	tmrh20/RF24@^1.3.11
+	https://bitbucket.org/teckel12/arduino-timer-free-tone.git
+	https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
+	; https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
+	https://github.com/platisd/nokia-5110-lcd-library.git@^2.3.0
+
+[env:main]
+platform = atmelavr
+board = nanoatmega328 ;uno
+framework = arduino
+upload_port = /dev/ttyUSB*
+build_flags =
+    -DPAD_NUMBER=0 ; Number between 0 - 5
 lib_ldf_mode = chain+
 lib_deps = 
 	SPI
