--- a/platformio.ini
+++ b/platformio.ini
@@ -53,11 +53,111 @@ lib_deps =
 
 [env:main]
 platform = atmelavr
-board = nanoatmega328 ;uno
+board = uno ;uno, nanoatmega328
 framework = arduino
 upload_port = /dev/ttyUSB*
 build_flags =
     -DPAD_NUMBER=0 ; Number between 0 - 5
+lib_ldf_mode = chain+
+lib_deps = 
+	SPI
+	Wire
+	Time
+	DS1307RTC
+	arduino-menusystem
+	tmrh20/RF24@^1.3.11
+	https://bitbucket.org/teckel12/arduino-timer-free-tone.git
+	https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
+	; https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
+	https://github.com/platisd/nokia-5110-lcd-library.git@^2.3.0
+
+[env:main-pad-1]
+platform = atmelavr
+board = nanoatmega328 ;uno
+framework = arduino
+upload_port = /dev/ttyUSB*
+build_flags =
+    -DPAD_NUMBER=1 ; Number between 0 - 5
+lib_ldf_mode = chain+
+lib_deps = 
+	SPI
+	Wire
+	Time
+	DS1307RTC
+	arduino-menusystem
+	tmrh20/RF24@^1.3.11
+	https://bitbucket.org/teckel12/arduino-timer-free-tone.git
+	https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
+	; https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
+	https://github.com/platisd/nokia-5110-lcd-library.git@^2.3.0
+
+[env:main-pad-2]
+platform = atmelavr
+board = nanoatmega328 ;uno
+framework = arduino
+upload_port = /dev/ttyUSB*
+build_flags =
+    -DPAD_NUMBER=2 ; Number between 0 - 5
+lib_ldf_mode = chain+
+lib_deps = 
+	SPI
+	Wire
+	Time
+	DS1307RTC
+	arduino-menusystem
+	tmrh20/RF24@^1.3.11
+	https://bitbucket.org/teckel12/arduino-timer-free-tone.git
+	https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
+	; https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
+	https://github.com/platisd/nokia-5110-lcd-library.git@^2.3.0
+
+[env:main-pad-3]
+platform = atmelavr
+board = nanoatmega328 ;uno
+framework = arduino
+upload_port = /dev/ttyUSB*
+build_flags =
+    -DPAD_NUMBER=3 ; Number between 0 - 5
+lib_ldf_mode = chain+
+lib_deps = 
+	SPI
+	Wire
+	Time
+	DS1307RTC
+	arduino-menusystem
+	tmrh20/RF24@^1.3.11
+	https://bitbucket.org/teckel12/arduino-timer-free-tone.git
+	https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
+	; https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
+	https://github.com/platisd/nokia-5110-lcd-library.git@^2.3.0
+
+[env:main-pad-4]
+platform = atmelavr
+board = nanoatmega328 ;uno
+framework = arduino
+upload_port = /dev/ttyUSB*
+build_flags =
+    -DPAD_NUMBER=4 ; Number between 0 - 5
+lib_ldf_mode = chain+
+lib_deps = 
+	SPI
+	Wire
+	Time
+	DS1307RTC
+	arduino-menusystem
+	tmrh20/RF24@^1.3.11
+	https://bitbucket.org/teckel12/arduino-timer-free-tone.git
+	https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
+	; https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
+	https://github.com/platisd/nokia-5110-lcd-library.git@^2.3.0
+
+[env:main-pad-5]
+platform = atmelavr
+board = nanoatmega328 ;uno
+framework = arduino
+upload_port = /dev/ttyUSB*
+build_flags =
+    -DPAD_NUMBER=5 ; Number between 0 - 5
 lib_ldf_mode = chain+
 lib_deps = 
 	SPI
