--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,21 +12,21 @@
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug",
-            "executable": "/home/bubnov/Documents/PlatformIO/Projects/roborally-play-pads/.pio/build/main/firmware.elf",
-            "projectEnvName": "main",
+            "executable": "/home/bubnov/Documents/PlatformIO/Projects/roborally-play-pads/.pio/build/main-pad-1/firmware.elf",
+            "projectEnvName": "main-pad-1",
             "toolchainBinDir": "/home/bubnov/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart",
             "preLaunchTask": {
                 "type": "PlatformIO",
-                "task": "Pre-Debug (main)"
+                "task": "Pre-Debug (main-pad-1)"
             }
         },
         {
             "type": "platformio-debug",
             "request": "launch",
             "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/home/bubnov/Documents/PlatformIO/Projects/roborally-play-pads/.pio/build/main/firmware.elf",
-            "projectEnvName": "main",
+            "executable": "/home/bubnov/Documents/PlatformIO/Projects/roborally-play-pads/.pio/build/main-pad-1/firmware.elf",
+            "projectEnvName": "main-pad-1",
             "toolchainBinDir": "/home/bubnov/.platformio/packages/toolchain-atmelavr/bin",
             "internalConsoleOptions": "openOnSessionStart"
         }
