--- a/platformio.ini
+++ b/platformio.ini
@@ -10,13 +10,13 @@
 
 [env:initial-setup-1]
 platform = atmelavr
-board = nanoatmega328 ;uno
+board = uno ;uno ;nanoatmega328
 framework = arduino
 upload_port = /dev/ttyUSB*
 build_flags =
     -DSET_CONFIG_DEFAULTS ; Write configuration defaults like contrast, backlight, sound.
     -DSET_GFX_ASSETS ; Write GFX assets
-    -DSET_GFX_ASSETS_PART_2 ; Write GFX assets part 1 (Both parts will not fit into the nano's memory)
+    -DSET_GFX_ASSETS_PART_1 ; Write GFX assets part 1 (Both parts will not fit into the nano's memory)
 lib_ldf_mode = chain+
 lib_deps = 
 	SPI
@@ -32,7 +32,7 @@ lib_deps =
 
 [env:initial-setup-2]
 platform = atmelavr
-board = nanoatmega328 ;uno
+board = uno ;uno ;nanoatmega328
 framework = arduino
 upload_port = /dev/ttyUSB*
 build_flags =
@@ -73,7 +73,7 @@ lib_deps =
 
 [env:main-pad-1]
 platform = atmelavr
-board = nanoatmega328 ;uno
+board = uno ;uno ;nanoatmega328
 framework = arduino
 upload_port = /dev/ttyUSB*
 build_flags =
@@ -93,7 +93,7 @@ lib_deps =
 
 [env:main-pad-2]
 platform = atmelavr
-board = nanoatmega328 ;uno
+board = uno ;uno ;nanoatmega328
 framework = arduino
 upload_port = /dev/ttyUSB*
 build_flags =
@@ -113,7 +113,7 @@ lib_deps =
 
 [env:main-pad-3]
 platform = atmelavr
-board = nanoatmega328 ;uno
+board = uno ;uno ;nanoatmega328
 framework = arduino
 upload_port = /dev/ttyUSB*
 build_flags =
@@ -133,7 +133,7 @@ lib_deps =
 
 [env:main-pad-4]
 platform = atmelavr
-board = nanoatmega328 ;uno
+board = uno ;uno ;nanoatmega328
 framework = arduino
 upload_port = /dev/ttyUSB*
 build_flags =
@@ -153,7 +153,7 @@ lib_deps =
 
 [env:main-pad-5]
 platform = atmelavr
-board = nanoatmega328 ;uno
+board = uno ;uno ;nanoatmega328
 framework = arduino
 upload_port = /dev/ttyUSB*
 build_flags =
