Add new build var PAD_ANOUNCE_SELF_PERIOD and change RF24 repository

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,7 +24,7 @@ lib_deps =
 	Time
 	DS1307RTC
 	arduino-menusystem
-	tmrh20/RF24@^1.3.11
+	nRF24/RF24@^1.3.11
 	https://bitbucket.org/teckel12/arduino-timer-free-tone.git
 	https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
 	; https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
@@ -45,7 +45,7 @@ lib_deps =
 	Time
 	DS1307RTC
 	arduino-menusystem
-	tmrh20/RF24@^1.3.11
+	nRF24/RF24@^1.3.11
 	https://bitbucket.org/teckel12/arduino-timer-free-tone.git
 	https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
 	; https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
@@ -58,6 +58,7 @@ framework = arduino
 upload_port = /dev/ttyUSB*
 build_flags =
     -DPAD_NUMBER=0 ; Number between 0 - 5
+    -DPAD_ANOUNCE_SELF_PERIOD=757 ; Ms between anounceSelf in the RoborallyApp
 lib_ldf_mode = chain+
 lib_deps = 
 	SPI
@@ -65,7 +66,7 @@ lib_deps =
 	Time
 	DS1307RTC
 	arduino-menusystem
-	tmrh20/RF24@^1.3.11
+	nRF24/RF24@^1.3.11
 	https://bitbucket.org/teckel12/arduino-timer-free-tone.git
 	https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
 	; https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
@@ -73,11 +74,12 @@ lib_deps =
 
 [env:main-pad-1]
 platform = atmelavr
-board = uno ;uno ;nanoatmega328
+board = nanoatmega328 ;uno ;nanoatmega328
 framework = arduino
 upload_port = /dev/ttyUSB*
 build_flags =
     -DPAD_NUMBER=1 ; Number between 0 - 5
+	-DPAD_ANOUNCE_SELF_PERIOD=787 ; Ms between anounceSelf in the RoborallyApp
 lib_ldf_mode = chain+
 lib_deps = 
 	SPI
@@ -85,7 +87,7 @@ lib_deps =
 	Time
 	DS1307RTC
 	arduino-menusystem
-	tmrh20/RF24@^1.3.11
+	nRF24/RF24@^1.3.11
 	https://bitbucket.org/teckel12/arduino-timer-free-tone.git
 	https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
 	; https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
@@ -98,6 +100,7 @@ framework = arduino
 upload_port = /dev/ttyUSB*
 build_flags =
     -DPAD_NUMBER=2 ; Number between 0 - 5
+	-DPAD_ANOUNCE_SELF_PERIOD=811 ; Ms between anounceSelf in the RoborallyApp
 lib_ldf_mode = chain+
 lib_deps = 
 	SPI
@@ -105,7 +108,7 @@ lib_deps =
 	Time
 	DS1307RTC
 	arduino-menusystem
-	tmrh20/RF24@^1.3.11
+	nRF24/RF24@^1.3.11
 	https://bitbucket.org/teckel12/arduino-timer-free-tone.git
 	https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
 	; https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
@@ -118,6 +121,7 @@ framework = arduino
 upload_port = /dev/ttyUSB*
 build_flags =
     -DPAD_NUMBER=3 ; Number between 0 - 5
+	-DPAD_ANOUNCE_SELF_PERIOD=829 ; Ms between anounceSelf in the RoborallyApp
 lib_ldf_mode = chain+
 lib_deps = 
 	SPI
@@ -125,7 +129,7 @@ lib_deps =
 	Time
 	DS1307RTC
 	arduino-menusystem
-	tmrh20/RF24@^1.3.11
+	nRF24/RF24@^1.3.11
 	https://bitbucket.org/teckel12/arduino-timer-free-tone.git
 	https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
 	; https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
@@ -138,6 +142,7 @@ framework = arduino
 upload_port = /dev/ttyUSB*
 build_flags =
     -DPAD_NUMBER=4 ; Number between 0 - 5
+	-DPAD_ANOUNCE_SELF_PERIOD=863 ; Ms between anounceSelf in the RoborallyApp
 lib_ldf_mode = chain+
 lib_deps = 
 	SPI
@@ -145,7 +150,7 @@ lib_deps =
 	Time
 	DS1307RTC
 	arduino-menusystem
-	tmrh20/RF24@^1.3.11
+	nRF24/RF24@^1.3.11
 	https://bitbucket.org/teckel12/arduino-timer-free-tone.git
 	https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
 	; https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
@@ -158,6 +163,7 @@ framework = arduino
 upload_port = /dev/ttyUSB*
 build_flags =
     -DPAD_NUMBER=5 ; Number between 0 - 5
+	-DPAD_ANOUNCE_SELF_PERIOD=907 ; Ms between anounceSelf in the RoborallyApp
 lib_ldf_mode = chain+
 lib_deps = 
 	SPI
@@ -165,7 +171,7 @@ lib_deps =
 	Time
 	DS1307RTC
 	arduino-menusystem
-	tmrh20/RF24@^1.3.11
+	nRF24/RF24@^1.3.11
 	https://bitbucket.org/teckel12/arduino-timer-free-tone.git
 	https://github.com/NickChungVietNam/ALL_EEPROM_24Cxx_ATMEL_ARDUINO_AT_MASTER.git
 	; https://github.com/bubnov-mikhail/nokia-5110-lcd-library.git
