--- a/platformio.ini
+++ b/platformio.ini
@@ -116,7 +116,7 @@ lib_deps =
 
 [env:main-pad-3]
 platform = atmelavr
-board = uno ;uno ;nanoatmega328
+board = nanoatmega328 ;uno ;nanoatmega328
 framework = arduino
 upload_port = /dev/ttyUSB*
 build_flags =
